; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_sparc-tdep.c_sparc32_stabs_argument_has_addr.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_sparc-tdep.c_sparc32_stabs_argument_has_addr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.gdbarch = type { i32 }
%struct.type = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.gdbarch*, %struct.type*)* @sparc32_stabs_argument_has_addr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @sparc32_stabs_argument_has_addr(%struct.gdbarch* %0, %struct.type* %1) #0 {
  %3 = alloca %struct.gdbarch*, align 8
  %4 = alloca %struct.type*, align 8
  store %struct.gdbarch* %0, %struct.gdbarch** %3, align 8
  store %struct.type* %1, %struct.type** %4, align 8
  %5 = load %struct.type*, %struct.type** %4, align 8
  %6 = call i64 @sparc_structure_or_union_p(%struct.type* %5)
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %18, label %8

8:                                                ; preds = %2
  %9 = load %struct.type*, %struct.type** %4, align 8
  %10 = call i64 @sparc_floating_p(%struct.type* %9)
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %16

12:                                               ; preds = %8
  %13 = load %struct.type*, %struct.type** %4, align 8
  %14 = call i32 @TYPE_LENGTH(%struct.type* %13)
  %15 = icmp eq i32 %14, 16
  br label %16

16:                                               ; preds = %12, %8
  %17 = phi i1 [ false, %8 ], [ %15, %12 ]
  br label %18

18:                                               ; preds = %16, %2
  %19 = phi i1 [ true, %2 ], [ %17, %16 ]
  %20 = zext i1 %19 to i32
  ret i32 %20
}

declare dso_local i64 @sparc_structure_or_union_p(%struct.type*) #1

declare dso_local i64 @sparc_floating_p(%struct.type*) #1

declare dso_local i32 @TYPE_LENGTH(%struct.type*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
